--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cors": "^2.8.5",
     "dgram": "^1.0.1",
     "express": "^4.18.2",
+    "express-ws": "^5.0.2",
     "ioredis": "^5.4.1"
   },
   "scripts": {
