--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "cors": "^2.8.5",
     "dgram": "^1.0.1",
     "express": "^4.18.2",
-    "express-ws": "^5.0.2",
-    "ioredis": "^5.4.1"
+    "ioredis": "^5.4.1",
+    "ws": "^8.18.0"
   },
   "scripts": {
     "start": "node server.js"
